src/log/build_1970-01-01_08-12-04/capture_topic/stderr.log
  File "/home/ubuntu/Desktop/48546356/comp8430_week10/src/install/capture_topic/lib/python3.10/site-packages/capture_topic/capture_sub.py", line 38
    self.save_id = 
                   ^
SyntaxError: invalid syntax

